<resources>
    <string name="app_name">TW314</string>

    <!-- Strings do ActionOverflow -->
    <string name="faq">Perguntas frequentes</string>
    <string name="about">Sobre o app</string>

    <!-- Strings da activity de Acesso -->
    <string name="access_hint">Insira o código aqui</string>
    <string name="project_slogan">Cuide do seu tempo</string>
    <string name="logo_descript">Logo do aplicativo</string>

    <!-- Strings da activity Sobre -->
    <string name="app_version">TW314 v0.0.0</string>
    <string name="app_rights">Todos os direitos reservados</string>
    <string name="contact">Contato: contato@tw314.com</string>
    <string name="website">Site: tw314.pythonanywhere.com</string>

    <!-- Strings da activity FAQ -->
    <string name="search">Pesquisar</string>
    <string name="results_found">
        Results found: <b>%s</b>
    </string>
    <string name="results_not_found">
        Results not found: <b>%s</b>
    </string>

    <!-- Opcoes do NavDrawer -->
    <string name="drawer_open">Abre NavDrawer</string>
    <string name="drawer_close">Fecha NavDrawer</string>
    <string name="add_ticket">Adicionar Senha</string>
    <string name="ticket_list">Visualizar Senhas</string>
    <string name="give_queue_up">Desistir da Fila</string>
    <string name="disable_notification">Desativar Notificações</string>
    <string name="settings">Configurações</string>
    <string name="exit">Sair</string>

    <!-- Strings das Preferencias/Configuracoes -->
    <string name="category">Atualização de Status</string>
    <string name="auto_notify_title">Notificações Automáticas</string>
    <string name="auto_notify_summary">O aplicativo avisará sobre mudanças  que ocorreram com a fila</string>
    <string name="update_frequency_title">Frequência de Atualização</string>
    <string name="update_frequency_summary">Selecione a frequência com que o aplicativo deve te notificar sobre a fila</string>
    <string-array name="frequency_array">
        <item>Sempre que uma nova senha for chamada</item>
        <item>Sempre que o estado da Ampulheta mudar</item>
    </string-array>
    <string-array name="frequency_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="hourglass_status_title">Estado da Ampulheta</string>
    <string name="hourglass_status_input">Informe o numero de pessoas</string>
    <string name="hourglass_status_summary">Escolha a cada quantas senhas a ampulheta deve mudar de estado</string>
    <string name="vibrate_title">Vibrar ao receber notificações</string>
    <string name="vibrate_summary">Além do Som de Notificação, o aparelho irá vibrar ao receber notificações</string>
    <string name="notify_tune_title">Toque de Notificação</string>
    <string name="persistence_title">Insistência</string>
    <string name="persistence_summary">Continuar notificando quando chegar sua vez até que o aviso seja respondido</string>

    <!-- Strings da tela principal -->
    <string name="ticket_presentation">Sua senha:</string>
    <string name="count_presentation">à sua frente</string>
    <string name="service_presentation">Serviço:</string>
    <string name="last_ticket_presentation">Chamando agora:</string>

    <!-- Example Strings da tela principal
         Retire/coloque o fecho do comentario dessa linha para desativar os exemplos -->
    <string name="ticket">TW314</string>
    <string name="ticket_count">1 senha</string>
    <string name="establishment">FATEC</string>
    <string name="service">Ticket Web</string>
    <string name="last_ticket">TW313</string>
    <!-- -->
</resources>
